fixed alignment of elements

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ h2, button{
     text-align: center;
 }
 
-.box{
+.box, button{
     height: 100px;
     border: 1px solid white;
     background-color: rgb(44, 43, 53);
@@ -20,6 +20,7 @@ h2, button{
     padding: 25px;
     box-sizing: border-box;
     font-size: 25px;
+    
 }
 
 button{
@@ -27,14 +28,15 @@ button{
     color: white;
 }
 
-.box:not(:nth-child(4)){
+.box{
+    display: flex;
+    flex-direction: row;
     border-radius: 10px;
+    align-items: center;
 
 }
 
 .input{
-    display: flex;
-    flex-direction: row;
     gap: 5px;
 }
 
